name:            knossos
version:         0.0.0.1
build-type:      Simple
cabal-version:   >= 1.18

executable ksc
  default-language: Haskell2010
  main-is: Main.hs
  other-modules: AD
                 ANF
                 Annotate
                 CSE
                 Cgen
                 KMonad
                 Ksc.CatLang
                 Ksc.Futhark
                 Ksc.Pipeline
                 Ksc.Traversal
                 Lang
                 LangUtils
                 Opt
                 OptLet
                 Parse
                 Prim
                 Rules
                 Shapes
  hs-source-dirs: src/ksc
  build-depends: base >= 4.9,
                 pretty >= 1.1,
                 filepath >= 1.4.1.1,
                 hspec >= 2.6.1,
                 hashable >= 1.2,
                 mtl >= 2.2,
                 parsec >= 3.1,
                 containers >= 0.5,
                 process >= 1.4,
                 directory >= 1.3,
                 edit-distance == 0.2.2.1
  ghc-options: -Werror -Wall -Wno-name-shadowing -Wno-unticked-promoted-constructors -Wno-type-defaults -Wno-unused-do-bind -Wincomplete-uni-patterns -Wincomplete-record-updates
