name:                hash
version:             0.0.0.0

build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     Hash,
                       HtmlCombinators,
                       CompareBehaviour,
                       Expr,
                       Benchmark
  build-depends:       base,
                       containers >= 0.5.9,
                       hashable,
                       hedgehog,
                       transformers,
                       clock,
                       temporary,
                       blaze-html
  default-language:    Haskell2010

executable hash
  main-is:             Main.hs
  hs-source-dirs:      .
  build-depends:       base,
                       containers >= 0.5.9,
                       hashable,
                       hedgehog,
                       transformers,
                       clock,
                       temporary,
                       blaze-html
  default-language:    Haskell2010
