name:                hash
version:             0.0.0.0

build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     Hash,
                       HtmlCombinators,
                       KATHash1,
                       KATHash2,
                       KATHash3,
                       KATHashFast,
                       Merge,
                       CompareBehaviour,
                       Expr,
                       Benchmark
  build-depends:       base,
                       containers >= 0.5.9,
                       hashable,
                       hedgehog,
                       transformers,
                       clock,
                       temporary,
                       blaze-html,
                       microlens
  default-language:    Haskell2010
  ghc-options: -Werror -Wall

executable hash
  main-is:             Main.hs
  other-modules:       Benchmark,
                       Expr,
                       Hash
  hs-source-dirs:      .
  build-depends:       base,
                       containers >= 0.5.9,
                       hashable,
                       hedgehog,
                       transformers,
                       clock,
                       temporary,
                       blaze-html,
                       microlens
  default-language:    Haskell2010
  ghc-options: -Werror -Wall
