name:                hash
version:             0.0.0.0

build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     Collision,
                       Hash,
                       HtmlCombinators,
                       KATHashInefficient,
                       KATHashFastOrig,
                       KATHashFastOrigHash,
                       KATHashFasterOrigHash,
                       Merge,
                       CompareBehaviour,
                       Expr,
                       Benchmark
  build-depends:       base,
                       containers >= 0.5.9,
                       hashable,
                       hedgehog,
                       transformers,
                       clock,
                       temporary,
                       blaze-html,
                       microlens,
                       random
  default-language:    Haskell2010
  ghc-options: -Werror -Wall

executable hash
  main-is:             Main.hs
  other-modules:       Benchmark,
                       Collision,
                       Expr,
                       Hash,
                       KATHashInefficient,
                       KATHashFastOrig,
                       KATHashFastOrigHash,
                       KATHashFasterOrigHash,
                       Merge
  hs-source-dirs:      .
  build-depends:       base,
                       containers >= 0.5.9,
                       hashable,
                       hedgehog,
                       transformers,
                       clock,
                       temporary,
                       blaze-html,
                       microlens,
                       random
  default-language:    Haskell2010
  ghc-options: -Werror -Wall -O2 -rtsopts
